Yep, it's one of those big commits again. I just had to refactor everything again.
