# controller/user.go
@@ -2,14 +2,14 @@ package controller
 
 import (
 	"github.com/gofiber/fiber/v2"
-	"lighthouse.uni-kiel.de/lighthouse-api/model"
 	"lighthouse.uni-kiel.de/lighthouse-api/service"
 )
 
 type UserController interface {
-	GetAll(c *fiber.Ctx) error
 	Get(c *fiber.Ctx) error
+	GetByID(c *fiber.Ctx) error
 	Create(c *fiber.Ctx) error
+	Login(c *fiber.Ctx) error
 	Register(c *fiber.Ctx) error
 	Update(c *fiber.Ctx) error
 	Delete(c *fiber.Ctx) error
@@ -30,56 +30,49 @@ func NewUserController(s service.UserService) *userController {
 	}
 }
 
-// @description Returns a list of all users
-// @produce json
-// @success 200 {array} model.User
-// @router /users [get]
-func (uc *userController) GetAll(c *fiber.Ctx) error {
+//	@description	Returns a list of all users
+//	@produce		json
+//	@success		200	{array}	model.User
+//	@router			/users [get]
+func (uc *userController) Get(c *fiber.Ctx) error {
+	// query users by name
+	name := c.Query("name", "")
+	if name != "" {
+		user, err := uc.userService.GetByName(name)
+		if err != nil {
+			return unwrapAndSendError(c, err)
+		}
+		return c.JSON(user)
+	}
+
+	// return all users
 	users, err := uc.userService.GetAll()
 	if err != nil {
 		return unwrapAndSendError(c, err)
 	}
-	for i := range users {
-		users[i].Password = "" // just to be sure
-	}
 	return c.JSON(users)
+
 }
 
-// @description Returns a user given a username
-// @produce json
-// @success 200 {object} model.User
-// @failure 400 {object} string "Bad Request"
-// @failure 404 {object} string "Not Found"
-// @router /user/{id} [get]
-func (uc *userController) Get(c *fiber.Ctx) error {
+//	@description	Returns a user by id
+//	@produce		json
+//	@success		200	{object}	model.User
+//	@failure		400	{object}	string	"Bad Request"
+//	@failure		404	{object}	string	"Not Found"
+//	@router			/user/{id} [get]
+func (uc *userController) GetByID(c *fiber.Ctx) error {
 	id, _ := c.ParamsInt("id", -1)
-	name := c.Query("name", "")
-	if id < 0 && name == "" {
+	if id < 0 {
 		return c.SendStatus(fiber.StatusBadRequest)
 	}
-	var user *model.User
-	var err error
-	if id >= 0 { // id takes precedence over name
-		user, err = uc.userService.GetByID(uint(id))
-	} else {
-		user, err = uc.userService.GetByName(name)
-	}
+	user, err := uc.userService.GetByID(uint(id))
 	if err != nil {
 		return unwrapAndSendError(c, err)
 	}
-	user.Password = "" // don't send the password hash
 	return c.JSON(user)
 }
 
-// @description Creates a user without a registration key (permissions needed)
-// @accept json
-// @produce plain
-// @success 201 {object} string "Created"
-// @failure 400 {object} string "Bad Request"
-// @failure 500 {object} string "Internal Server Error"
-// @failure 409 {object} string "Conflict"
-// @router /user [post]
-func (uc *userController) Create(c *fiber.Ctx) error {
+func (uc *userController) Login(c *fiber.Ctx) error {
 	c.Accepts("json", "application/json", "application/x-www-form-urlencoded")
 	payload := struct {
 		Username string `json:"username"`
@@ -88,51 +81,62 @@ func (uc *userController) Create(c *fiber.Ctx) error {
 	if err := c.BodyParser(&payload); err != nil {
 		return c.Status(fiber.StatusBadRequest).SendString("Could not parse request body")
 	}
-	if payload.Username == "" || payload.Password == "" {
-		return c.Status(fiber.StatusBadRequest).SendString("Empty field")
-	}
-	user := model.User{
-		Username: payload.Username,
-		Password: payload.Password,
-	}
-	err := uc.userService.Create(&user)
+	token, err := uc.userService.Login(payload.Username, payload.Password)
 	if err != nil {
 		return unwrapAndSendError(c, err)
 	}
-	return c.SendStatus(fiber.StatusCreated)
+	return c.JSON(token)
 }
 
-// @description Creates a user with a registration key (no extra auth needed)
-// @id RegisterUser
-// @accept json
-// @produce plain
-// @success 201 {object} string "Created"
-// @failure 400 {object} string "Bad Request"
-// @failure 403 {object} string "Forbidden"
-// @failure 500 {object} string "Internal Server Error"
-// @failure 409 {object} string "Conflict"
-// @router /register [post]
+//	@description	Creates a user with a registration key (no extra auth needed)
+//	@id				RegisterUser
+//	@accept			json
+//	@produce		plain
+//	@success		201	{object}	string	"Created"
+//	@failure		400	{object}	string	"Bad Request"
+//	@failure		403	{object}	string	"Forbidden"
+//	@failure		500	{object}	string	"Internal Server Error"
+//	@failure		409	{object}	string	"Conflict"
+//	@router			/register [post]
 func (uc *userController) Register(c *fiber.Ctx) error {
 	c.Accepts("json", "application/json", "application/x-www-form-urlencoded")
 
 	payload := struct {
 		Username         string `json:"username"`
 		Password         string `json:"password"`
+		Email            string `json:"email"`
 		Registration_Key string `json:"registration_key"` // snake case naming for decoding of x-www-form-urlencoded bodies
 	}{}
 	if err := c.BodyParser(&payload); err != nil {
 		return c.Status(fiber.StatusBadRequest).SendString("Could not parse request body")
 	}
+	err := uc.userService.Register(payload.Username, payload.Password, payload.Email, payload.Registration_Key)
+	if err != nil {
+		return unwrapAndSendError(c, err)
+	}
+	return c.SendStatus(fiber.StatusCreated)
+}
 
-	if payload.Username == "" || payload.Password == "" || payload.Registration_Key == "" {
-		return c.Status(fiber.StatusBadRequest).SendString("Empty field")
+//	@description	Creates a user without a registration key (permissions needed)
+//	@accept			json
+//	@produce		plain
+//	@success		201	{object}	string	"Created"
+//	@failure		400	{object}	string	"Bad Request"
+//	@failure		500	{object}	string	"Internal Server Error"
+//	@failure		409	{object}	string	"Conflict"
+//	@router			/user [post]
+func (uc *userController) Create(c *fiber.Ctx) error {
+	c.Accepts("json", "application/json", "application/x-www-form-urlencoded")
+	payload := struct {
+		Username string `json:"username"`
+		Password string `json:"password"`
+		Email    string `json:"email"`
+	}{}
+	if err := c.BodyParser(&payload); err != nil {
+		return c.Status(fiber.StatusBadRequest).SendString("Could not parse request body")
 	}
 
-	user := model.User{
-		Username: payload.Username,
-		Password: payload.Password,
-	}
-	err := uc.userService.Register(&user, payload.Registration_Key)
+	err := uc.userService.Create(payload.Username, payload.Password, payload.Email)
 	if err != nil {
 		return unwrapAndSendError(c, err)
 	}
@@ -146,32 +150,27 @@ func (uc *userController) Update(c *fiber.Ctx) error {
 		return c.SendStatus(fiber.StatusBadRequest)
 	}
 	payload := struct {
-		Username string `json:"username"` // new username or "" to leave unchanged
-		Password string `json:"password"` // new (cleartext) password or ""
+		Username string `json:"username"`
+		Password string `json:"password"`
+		Email    string `json:"email"`
 	}{}
 	if err := c.BodyParser(&payload); err != nil {
 		return c.Status(fiber.StatusBadRequest).SendString("Could not parse request body")
 	}
 
-	user := model.User{
-		Username: payload.Username,
-		Password: payload.Password,
-	}
-	user.ID = uint(id)
-
-	err := uc.userService.Update(&user)
+	err := uc.userService.Update(uint(id), payload.Username, payload.Password, payload.Email)
 	if err != nil {
 		return unwrapAndSendError(c, err)
 	}
 	return c.SendStatus(fiber.StatusOK)
 }
 
-// @description Creates a user with a registration key (no extra auth needed)
-// @id RegisterUser
-// @produce plain
-// @success 200 {object} string "OK"
-// @failure 404 {object} string "Not Found"
-// @router /user/{id} [delete]
+//	@description	Creates a user with a registration key (no extra auth needed)
+//	@id				RegisterUser
+//	@produce		plain
+//	@success		200	{object}	string	"OK"
+//	@failure		404	{object}	string	"Not Found"
+//	@router			/user/{id} [delete]
 func (uc *userController) Delete(c *fiber.Ctx) error {
 	id, _ := c.ParamsInt("id", -1)
 	if id < 0 {
